--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
   "permissions": [
     "experimental",
     "power",
-    "storage"
+    "storage",
+    "tabs"
   ],
   "browser_action": {
     "default_title": "__MSG_disabledTitle__",
