--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,17 @@
     "experimental",
     "power",
     "storage",
-    "tabs"
+    "tabs",
+    "activeTab",
+    "<all_urls>"
   ],
+    
+    
+"content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content.js"]
+  }],
+    
   "browser_action": {
     "default_title": "__MSG_disabledTitle__",
     "default_icon": {
@@ -23,6 +32,8 @@
       "38": "images/night-38.png"
     }
   },
+    
+    
   "background": {
     "scripts": ["background.js"],
     "persistent": false
